# cbor-rpc-py

./: .coveragerc  .dockerignore  .gitignore  AGENTS.md  README.md  conftest.py  events.py  pipe.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
cbor_rpc/: __init__.py  async_pipe.py  client.py  emitter.py  json_transformer.py  pipe.py  promise.py  rpc.py  rpc_server.py  server.py  server_base.py  sync_pipe.py  tcp.py  timed_promise.py  transformer.py
cbor_rpc/event/: __init__.py  emitter.py
cbor_rpc/pipe/: __init__.py  aio_pipe.py  event_pipe.py  pipe.py  server_base.py
cbor_rpc/rpc/: __init__.py  context.py  logging.py  rpc_base.py  rpc_call.py  rpc_server.py  rpc_v1.py  server_base.py
cbor_rpc/ssh/: __init__.py  ssh_pipe.py
cbor_rpc/stdio/: __init__.py  stdio_pipe.py
cbor_rpc/tcp/: __init__.py  tcp.py
cbor_rpc/transformer/: __init__.py  cbor_transformer.py  json_transformer.py  transformer.py
examples/: json_transformer_example.py  rpc_backends_example.py  tcp_rpc_example.py
examples/fs_rpc/: filesystem_client.py  filesystem_server.py
examples/ssh_exec/: README.md  forwarding_example.py  rpc_client.py  simple_exec.py  stdio_rpc_server.py
tests/: add_backend_example.py  conftest.py  test_async_pipe.py  test_cbor_transformer.py  test_custom_backends.py  test_duplex.py  test_event_emitter.py  test_event_pipe.py  test_json_transformer.py  test_pipe.py  test_rpc_generic.py  test_rpc_system.py  test_rpc_v1.py  test_server_generics.py  test_ssh_docker_pipe.py  test_stdio_rpc.py  test_sync_pipe.py  test_tcp.py  test_transformer.py
tests/event/: test_emitter.py
tests/helpers/: __init__.py  backend_factory.py  simple_pipe.py  simple_tcp_server.py  stdio_test_script.py  stream_pair.py  timeout_queue.py
tests/integration/: rpc_test_helpers.py  test_rpc_ssh_stdio.py  test_rpc_stdio.py  test_rpc_system.py
tests/misc/: test_timed_promise.py
tests/pipe/: test_aio_pipe.py  test_event_pipe.py  test_pipe.py  test_pipe_extra.py
tests/rpc/: test_rpc_base.py  test_rpc_call.py  test_rpc_cancellation.py  test_rpc_logging.py  test_rpc_v1.py  test_rpc_v1_extra.py  test_server_base.py
tests/scripts/: stdio_rpc_server.py
tests/tcp/: test_tcp.py  (+1 more)
(+24 files in other folders)
