[project]
name = "cbor-rpc"
version = "0.1.0"
description = "An async-compatible CBOR-based RPC system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "asyncssh>=2.14.0",
    "bcrypt",
    "cbor2",
    "docker",
    "ijson[yajl]",
        "black>=24.0.0",
    "pre-commit>=3.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"

addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["cbor_rpc"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ["cbor_rpc"]

[tool.coverage.report]
show_missing = true
skip_covered = true
