[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbor-rpc"
version = "1.0.0"
description = "An async-compatible CBOR-based RPC system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Sudip Bhattarai", email = "sudip@bhattarai.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncssh>=2.14.0",
    "bcrypt",
    "cbor2",
    "ijson[yajl]"
]

[project.urls]
Homepage = "https://github.com/mesudip/cbor-rpc-py"

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "docker"
]
dev = [
    "black>=24.0.0",
    "pre-commit>=3.0.0"
]

[tool.setuptools.packages.find]
include = ["cbor_rpc", "cbor_rpc.*"]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"

addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["cbor_rpc"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ["cbor_rpc"]

[tool.coverage.report]
show_missing = true
skip_covered = true
